--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AP'
 - !lcsh 'English wit and humor -- Periodicals'
+- GITenberg
 title: Punch, or the London Charivari, Vol. 108, May 4th, 1895
 url: http://www.gutenberg.org/ebooks/44759
